--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,15 @@
   <meta charset='utf-8'/>
   <meta name='description' content='Documentation website'/>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
-  <link href='assets.css' rel='stylesheet' type='text/css'>
+  <link href='/assets/assets.css' rel='stylesheet' type='text/css'>
 </head>
-<body>  
+<body>
   {{ content }}
-  
+
   <!--[if lt IE 9]><script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script><![endif]-->
-  <script src='assets.js' type='text/javascript'></script>
+  <script src='/assets/assets.js' type='text/javascript'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js' type='text/javascript'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/locale/fr.min.js' type='text/javascript'></script>
   <script>require('boot');</script>
 </body>
 </html>
