--- a/assets/assets.scss
+++ b/assets/assets.scss
@@ -1,3 +1,6 @@
+---
+---
+
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
 
 /* ==========================================================================
@@ -442,7 +445,7 @@ code {
 #sidebar {
   background: #191919;
   color: #fff;
-  float: left;  
+  float: left;
   height: 100%;
   overflow: auto;
   position: absolute;
@@ -642,3 +645,6 @@ code {
   padding: 15px;
   white-space: pre;
 }
+
+
+@import "assets/custom.scss";
