--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<h1><img src="/assets/logo.svg" class="styled"></h1>
+<h1><img src="/assets/ammy-devs.svg" class="styled"></h1>
 <h2 class="version">v3.0 - juillet 2020</h2>
 <ul id='links'>
   {% for post in site.posts reversed %}
