--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,7 @@
-<h1><img src="/assets/ammy-devs.svg" class="styled"></h1>
-<h2 class="version">v3.0 - juillet 2020</h2>
+<header id="top-brand">
+  <h1><img src="/assets/ammy-devs.svg" class="styled"></h1>
+  <p class="version">v3.0 - juillet 2020</p>
+</header>
 <ul id='links'>
   {% for post in site.posts reversed %}
     {% if post.category == null %}
