--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,16 @@
   <title>{{ site.title }}</title>
   <meta charset='utf-8'/>
   <meta name='description' content='Documentation website'/>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;1,200&display=swap" rel="stylesheet">
   <link href='/assets/assets.css' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   {{ content }}
 
   <!--[if lt IE 9]><script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script><![endif]-->
   <script src='/assets/assets.js' type='text/javascript'></script>
+  <script src='/assets/custom.js' type='text/javascript'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js' type='text/javascript'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/locale/fr.min.js' type='text/javascript'></script>
   <script>require('boot');</script>
