--- a/assets/assets.scss
+++ b/assets/assets.scss
@@ -65,7 +65,7 @@ audio:not([controls]) {
  */
 
 html {
-    font-family: sans-serif; /* 1 */
+    font-family: Raleway, sans-serif; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
     -ms-text-size-adjust: 100%; /* 2 */
 }
@@ -77,6 +77,12 @@ html {
 body {
     margin: 0;
     min-width: 960px;
+    height: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    font-family: Raleway, sans-serif;
 }
 
 /* ==========================================================================
@@ -415,7 +421,7 @@ body,
 input,
 textarea {
   color: #191919;
-  font: 14px/140% 'Open Sans', Arial, sans-serif;
+  font: 14px/140% 'Raleway', sans-serif;
 }
 
 a {
@@ -444,37 +450,48 @@ code {
 /* SIDEBAR */
 #sidebar {
   background: #191919;
-  color: #fff;
-  float: left;
-  height: 100%;
-  overflow: auto;
-  position: absolute;
+  color: #4c4c4c;
+  overflow: initial;
   top: 0;
-  width: 240px;
+  max-width: 240px;
+  width: 20vw;
+  header {
+    position: sticky;
+    top: 0;
+  }
 }
 
 #sidebar h1 {
   background: #111;
   font-size: 14px;
   margin: 0;
-  padding: 20px;
+  padding: 10px 14px;
   text-transform: uppercase;
 }
 
 #sidebar h2 {
-  color: #888;
-  font-size: 14px;
+  color: #4c4c4c;
+  font-size: 16px;
   margin: 0;
+  font-size: 16px;
+  margin: 0;
+  background: #e2e2e2;
+  display: inline-block;
+  padding: 3px 5px;
+  border-radius: 6px;
 }
 
 #sidebar ul {
   list-style: none;
-  margin: 0;
   padding: 0;
+  margin: 0 0 11px 0;
 }
 
 #sidebar ul#links {
   padding: 20px;
+  position: sticky;
+  top: 90px;
+  background: #f7f7f7;
 }
 
 #sidebar ul ul {
@@ -484,7 +501,7 @@ code {
 #sidebar ul li a {
   color: #fff;
   display: block;
-  padding: 0 0 15px;
+  padding: 0 0 6px;
 }
 #sidebar ul li a:active,
 #sidebar ul li a.active {
@@ -492,7 +509,8 @@ code {
 }
 
 #sidebar input {
-  background: #111;
+  background: #fff;
+  width: 90%;
   border: 0;
   border-radius: 2px;
   -moz-border-radius: 2px;
@@ -516,8 +534,7 @@ code {
 /* References */
 #content {
   padding: 20px;
-  padding-left: 260px;
-  max-width: 700px;
+  width: 80vw;
 }
 
 #content .control {
@@ -532,7 +549,7 @@ code {
 }
 
 #content article > a {
-  background: #333;
+  background: #e2e2e2;
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
@@ -541,12 +558,12 @@ code {
   padding: 15px;
 }
 #content article > a:hover {
-  background: #222;
+  background: #ffffff;
   text-decoration: none;
 }
 
 #content a h2 {
-  color: #fff;
+  color: #4c4c4c;
   font-size: 18px;
   font-weight: normal;
   margin: 0;
@@ -647,3 +664,4 @@ code {
 }
 
 @import "custom.scss";
+@import "responsive.scss"
