--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -22,6 +22,12 @@ img.styled {
     text-align: left;
   }
   article {
+    &.active {
+      > a {
+        position: sticky;
+        top: 20px;
+      }
+    }
     > a {
       @include rounded-corners(8px);
     }
