--- a/assets/responsive.scss
+++ b/assets/responsive.scss
@@ -27,9 +27,17 @@
     #sidebar {
       position: sticky;
       top: 0;
+      z-index: 1;
     }
     #content {
       padding: 0;
+      article {
+        &.active {
+          > a {
+            top: 50px;
+          }
+        }
+      }  
       a.control {
         font-size: 12px;
         margin: 15px 15px 0 15px;
